# TokenSmith

./: .gitignore  Makefile  README.md  additions.md  environment.yml  example.md  pyproject.toml
.github/workflows/: python-app.yml
config/: config.yaml
data/: extracted_index.json  extracted_sections.json
index/sections/: textbook_index_page_to_chunk_map.json
scripts/: build_llama.sh  detect_llama.py
src/: __init__.py  api_server.py  config.py  embedder.py  feedback_store.py  generator.py  index_builder.py  main.py  query_enhancement.py  retriever.py  user_feedback_model.py
src/instrumentation/: analyze_logs.py  logging.py
src/planning/: heuristics.py  planner.py
src/preprocessing/: chunking.py  extraction.py
src/ranking/: ranker.py  reranker.py
tests/: README.md  benchmarks.yaml  conftest.py  test_api.py  test_api_server.py  test_benchmarks.py  test_end_to_end.py  test_extraction.py
tests/metrics/: __init__.py  async_llm_judge.py  base.py  chunk_retrieval.py  keyword_match.py  llm_judge.py  nli.py  registry.py  scorer.py  semantic.py
tests/utils/: __init__.py  generate_report.py
